Update and rename modern_profile.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Saya</title>
+    <title>Troy</title>
     <style>
         * {
             margin: 0;
@@ -399,7 +399,7 @@
 
     <section class="hero" id="home">
         <div class="container hero-content">
-            <h1>Halo, Saya [Nama Anda]</h1>
+            <h1>Halo, Saya Troy</h1>
             <p>Web Developer | Designer | Creator</p>
             <a href="#contact" class="cta-button">Hubungi Saya</a>
         </div>
