--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
     <!-- Header -->
     <header>
         <div class="container header-container">
-            <a href="#" class="logo">ProfilKu</a>
+            <a href="#" class="logo">My Profile</a>
             <nav>
                 <ul>
                     <li><a href="#" class="active">Beranda</a></li>
@@ -633,7 +633,7 @@
     <section class="profile-hero">
         <div class="container">
             <div class="profile-avatar">
-                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Foto Profil">
+                <img src="https://unsplash.com/id/foto/foto-siluet-pria-di-tebing-saat-matahari-terbenam-_6HzPU9Hyfg" alt="Foto Profil">
             </div>
             <h1 class="profile-name">Troy</h1>
             <p class="profile-title">Frontend Developer & UI/UX Designer</p>
