--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
     <section class="profile-hero">
         <div class="container">
             <div class="profile-avatar">
-                <img src="https://unsplash.com/id/foto/foto-siluet-pria-di-tebing-saat-matahari-terbenam-_6HzPU9Hyfg" alt="Foto Profil">
+                <img src="https://ibb.co/VcBMP4n6" alt="Foto Profil">
             </div>
             <h1 class="profile-name">Troy</h1>
             <p class="profile-title">Frontend Developer & UI/UX Designer</p>
